add plugin copy ShopId and UserId

--- a/src/components/Popup.scss
+++ b/src/components/Popup.scss
@@ -74,6 +74,7 @@
   background: var(--app-background-color);
   overflow-y: scroll;
   padding: 0;
+  display: inline;
 }
 
 .cLauncher .cLauncher__hint {
