update keep session

--- a/src/components/Popup.scss
+++ b/src/components/Popup.scss
@@ -40,7 +40,7 @@
   height: 50px;
   font-size: var(--search-input-value-text-size);
   font-weight: 300;
-  width: 100%;
+  width: 485px;
   padding: 5px 5px 5px 15px;
 }
 
