update import content

--- a/src/components/Popup.scss
+++ b/src/components/Popup.scss
@@ -1,3 +1,6 @@
+@import url("https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.css");
+@import url("https://cdn.jsdelivr.net/npm/@mdi/font@5.9.55/css/materialdesignicons.min.css");
+
 :root {
   --app-background-color: #FFFFFF;
   --search-input-caret-color: #222222;
