--- a/src/components/Popup.scss
+++ b/src/components/Popup.scss
@@ -32,9 +32,7 @@
 }
 
 .result-message {
-  user-select: none;
   transition: background 20ms ease-in 0s;
-  cursor: not-allowed;
   display: inline-flex;
   align-items: center;
   flex-shrink: 0;
@@ -49,6 +47,7 @@
   margin-right: 1px;
   font-weight: 500;
   transform: translateY(0.5px);
+  user-select: text;
 
   &.success {
     color: green;
