--- a/src/components/Popup.scss
+++ b/src/components/Popup.scss
@@ -32,6 +32,7 @@
 }
 
 .result-message {
+  user-select: text;
   transition: background 20ms ease-in 0s;
   display: inline-flex;
   align-items: center;
